--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <nav id="navbar" class="navigation">
+      <nav id="navbar" class="navigation desktop-invisible">
         <input id="drop-toggle" type="checkbox" />
         <label class="hamburger" for="drop-toggle">
           <div class="top" id="top"></div>
