--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memo</title>
-    <meta name="description" content="Personal website" />
+    <meta name="title" content="Mehmet Kisacik" />
+    <meta name="description" content="I'm a web developer and designer." />
+    <meta
+      name="keywords"
+      content="Web Developer, Web Development, Front-End Development, Back-End Development, HTML/CSS, JavaScript, TypeScript, Portfolio"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="author" content="Mehmet Ali Kisacik" />
+    <meta
+      property="og:image"
+      content="https://k-memo.github.io/assets/images/memoki.svg"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       rel="apple-touch-icon"
@@ -380,7 +393,9 @@
     <footer id="contact">
       <div id="footer-content">
         <h2>Contact</h2>
-        <p>mehmet.kisacik12@gmail.com</p>
+        <a href="mailto:mehmet.kisacik12@gmail.com"
+          >mehmet.kisacik12@gmail.com</a
+        >
         <a href="https://www.linkedin.com/in/mehmetki">LinkedIn</a>
         <p>&copy; 2023 Mehmet Kisacik. All rights reserved.</p>
       </div>
