preview image added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memo</title>
-    <meta name="title" content="Mehmet Kisacik" />
-    <meta name="description" content="I'm a web developer and designer." />
+    <meta name="og:title" content="Mehmet Kisacik" />
+    <meta name="og:description" content="I'm a web developer and designer." />
     <meta
       name="keywords"
       content="Web Developer, Web Development, Front-End Development, Back-End Development, HTML/CSS, JavaScript, TypeScript, Portfolio"
@@ -15,8 +15,8 @@
     <meta name="language" content="English" />
     <meta name="author" content="Mehmet Ali Kisacik" />
     <meta
-      property="og:image"
-      content="https://k-memo.github.io/assets/images/memoki.svg"
+      name="og:image"
+      content="https://k-memo.github.io/assets/images/preview.png"
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link
