--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       <nav class="mobile-invisible">
         <ul>
           <li><a href="#home">Home</a></li>
+          <!-- <li><a href="#projects">Projects</a></li> -->
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -98,8 +99,9 @@
         </label>
         <nav class="dropdown" id="dropdown">
           <a href="#home">Home</a>
+          <!-- <a href="#projects">Projects</a> -->
           <a href="#about">About</a>
-          <a href="#contact">Contact</a>
+          <a href="#contact">Contact</a>+
         </nav>
       </nav>
     </header>
@@ -119,8 +121,22 @@
           <img src="assets/images/memo_1.jpg" alt="" />
         </div>
       </section>
+      <!-- <section id="projects"> -->
+      <!-- <h2>Projects</h2> -->
+      <!-- </section> -->
       <section id="about">
         <h2>About me</h2>
+        <p>
+          <span style="font-size: 2rem; font-weight: 600">👋 Hi there!</span>
+          <br /><br />
+          I'm <strong>Mehmet</strong>, a passionate
+          <strong>web and mobile developer</strong> currently pursuing a degree
+          in Computer Science at the
+          <strong>University of Applied Sciences Salzburg</strong>. <br />
+          <br />I thrive on the intersection of technology and creativity, with
+          a keen interest in industrial design. In my free time I like to design
+          and create stuff on my 3D Printer.
+        </p>
         <div id="cv">
           <div id="about-image-container">
             <img src="assets/images/memo_3.jpg" alt="baby-yoda memo" />
