added project tab with functions

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <nav class="mobile-invisible">
         <ul>
           <li><a href="#home">Home</a></li>
-          <!-- <li><a href="#projects">Projects</a></li> -->
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -99,7 +99,7 @@
         </label>
         <nav class="dropdown" id="dropdown">
           <a href="#home">Home</a>
-          <!-- <a href="#projects">Projects</a> -->
+          <a href="#projects">Projects</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>+
         </nav>
@@ -121,9 +121,121 @@
           <img src="assets/images/memo_1.jpg" alt="" />
         </div>
       </section>
-      <!-- <section id="projects"> -->
-      <!-- <h2>Projects</h2> -->
-      <!-- </section> -->
+      <section id="projects">
+        <h2>Projects</h2>
+        <ul class="list-item">
+          <li>
+            <div class="item-header" onclick="toggleContent(this)">
+              <svg
+                class="collapseIcon"
+                xmlns="http://www.w3.org/2000/svg"
+                height="16"
+                width="10"
+                viewBox="0 0 320 512"
+              >
+                <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+                <path
+                  d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
+                />
+              </svg>
+              <p>Flashy: A Flashcard Web Application</p>
+            </div>
+            <div class="item-content">
+              <div class="pagelet">
+                <h3>Summary</h3>
+                <p>
+                  Flashy is a web application designed for creating and sharing
+                  flashcard decks. It provides users with the ability to
+                  collaborate on decks and includes a Pomodoro timer feature to
+                  aid in learning the created decks. The application leverages
+                  various technologies and APIs to deliver a seamless user
+                  experience.
+                </p>
+              </div>
+              <div class="pagelet">
+                <h3>Dashboard</h3>
+                <img
+                  src="assets/images/flashy/dashboard_flashy.png"
+                  alt="dashboard of flashy"
+                />
+              </div>
+              <div class="pagelet">
+                <h3>Editor</h3>
+                <img
+                  src="assets/images/flashy/editor_flashy.png"
+                  alt="editor of flashy"
+                />
+              </div>
+              <div class="pagelet">
+                <h3>Learb Mode</h3>
+                <img
+                  src="assets/images/flashy/learn_mode_flashy.png"
+                  alt="learn mode of flashy"
+                />
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="item-header" onclick="toggleContent(this)">
+              <svg
+                class="collapseIcon"
+                xmlns="http://www.w3.org/2000/svg"
+                height="16"
+                width="10"
+                viewBox="0 0 320 512"
+              >
+                <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+                <path
+                  d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
+                />
+              </svg>
+              <p>Moondrop (Redesign)</p>
+            </div>
+            <div class="item-content">
+              <div class="pagelet">
+                <h3>Overview</h3>
+                <p>
+                  This is a redesign for Moondrop, a headphone manufacturer. The
+                  project focuses on an intuitive, modern design, interactive
+                  product pages, and seamless responsiveness. Please note that
+                  all visual elements, including product images, are the
+                  property of Moondrop, used here for portfolio purposes only.
+                </p>
+              </div>
+              <div class="pagelet">
+                <h3>Logo</h3>
+                <img
+                  src="assets/images/moondrop/moondrop_logo_redesign.png"
+                  alt="logo of moondrop"
+                />
+              </div>
+              <div class="pagelet">
+                <h3>UI</h3>
+                <img
+                  src="assets/images/moondrop/moondrop_ui.png"
+                  alt="logo of moondrop"
+                />
+              </div>
+              <div class="pagelet">
+                <h3>Wireframes</h3>
+                <img
+                  src="assets/images/moondrop/moondrop_wireframes.png"
+                  alt="logo of moondrop"
+                />
+                <img
+                  src="assets/images/moondrop/moondrop_wireframes-1.png"
+                  alt="logo of moondrop"
+                />
+                <img
+                  src="assets/images/moondrop/moondrop_wireframes-2.png"
+                  alt="logo of moondrop"
+                />
+              </div>
+            </div>
+          </li>
+          <!-- Add more items as needed -->
+        </ul>
+      </section>
       <section id="about">
         <h2>About me</h2>
         <p>
