--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 />
               </div>
               <div class="pagelet">
-                <h3>Learb Mode</h3>
+                <h3>Learn Mode</h3>
                 <img
                   src="assets/images/flashy/learn_mode_flashy.png"
                   alt="learn mode of flashy"
@@ -213,22 +213,22 @@
                 <h3>UI</h3>
                 <img
                   src="assets/images/moondrop/moondrop_ui.png"
-                  alt="logo of moondrop"
+                  alt="ui of moondrop"
                 />
               </div>
               <div class="pagelet">
                 <h3>Wireframes</h3>
                 <img
                   src="assets/images/moondrop/moondrop_wireframes.png"
-                  alt="logo of moondrop"
+                  alt="wireframe of moondrop"
                 />
                 <img
                   src="assets/images/moondrop/moondrop_wireframes-1.png"
-                  alt="logo of moondrop"
+                  alt="wireframe of moondrop"
                 />
                 <img
                   src="assets/images/moondrop/moondrop_wireframes-2.png"
-                  alt="logo of moondrop"
+                  alt="wireframe of moondrop"
                 />
               </div>
             </div>
