--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                   <li>Webprogramming</li>
                   <li>Objectoriented Programming</li>
                   <li>Mediadesign</li>
-                  <li>3D Prototyping und Scripting</li>
+                  <li>3D Prototyping and Scripting</li>
                 </ul>
               </div>
               <div class="edu-section">
