--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <a href="#home">Home</a>
           <a href="#projects">Projects</a>
           <a href="#about">About</a>
-          <a href="#contact">Contact</a>+
+          <a href="#contact">Contact</a>
         </nav>
       </nav>
     </header>
@@ -128,6 +128,7 @@
       <section id="projects">
         <h2>Projects</h2>
         <ul class="project-list">
+          <h3>Web Development</h3>
           <li class="list-item">
             <div
               class="item-header"
@@ -240,6 +241,64 @@
                   src="assets/images/moondrop/moondrop_wireframes-2.png"
                   alt="wireframe of moondrop"
                 />
+              </div>
+            </div>
+          </li>
+        </ul>
+        <ul class="project-list">
+          <h3>Industrial</h3>
+          <li class="list-item">
+            <div
+              class="item-header"
+              onclick="toggleContent(this.parentElement)"
+            >
+              <svg
+                class="collapseIcon"
+                xmlns="http://www.w3.org/2000/svg"
+                height="16"
+                width="10"
+                viewBox="0 0 320 512"
+              >
+                <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+                <path
+                  d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
+                />
+              </svg>
+              <p>stick</p>
+            </div>
+            <div class="item-content">
+              <div class="pagelet">
+                <h3>Overview</h3>
+                <p>
+                  stick is a fighting stick which I made for playing Tekken with
+                  my Buddy. I am not a pro by any means but I love fighting
+                  games and using a gamepad with a big Joystick and Buttons. I
+                  modeled and 3D-printed the shell via Fusion 360 and my beloved
+                  Anycubic Chiron. I used Arduino Uno as the logic board, using
+                  the UnoJoy Github repo. All in all it was a very fun project
+                  and my first time using an Arduino Board!
+                </p>
+              </div>
+              <div class="pagelet">
+                <img
+                  src="assets/images/stick/stick_1.jpg"
+                  alt="fighting stick"
+                />
+              </div>
+              <div class="pagelet">
+                <img
+                  src="assets/images/stick/stick_2.jpg"
+                  alt="fighting stick"
+                />
+              </div>
+              <div class="pagelet">
+                <video controls>
+                  <source
+                    src="assets/images/stick/stick.mp4"
+                    type="video/mp4"
+                  />
+                  Your browser does not support the video tag.
+                </video>
               </div>
             </div>
           </li>
