--- a/index.html
+++ b/index.html
@@ -270,13 +270,16 @@
               <div class="pagelet">
                 <h3>Overview</h3>
                 <p>
-                  stick is a fighting stick which I made for playing Tekken with
-                  my Buddy. I am not a pro by any means but I love fighting
-                  games and using a gamepad with a big Joystick and Buttons. I
-                  modeled and 3D-printed the shell via Fusion 360 and my beloved
-                  Anycubic Chiron. I used Arduino Uno as the logic board, using
-                  the UnoJoy Github repo. All in all it was a very fun project
-                  and my first time using an Arduino Board!
+                  stick is a custom fighting stick that I made for playing
+                  Tekken with my buddy Edvin. I am not a pro by any means, but I
+                  love fighting games and using gamepads with a big joystick and
+                  buttons.
+                </p>
+                <p>
+                  I modeled and 3D-printed the shell via Fusion 360 and my
+                  beloved Anycubic Chiron. I used Arduino Uno as the logic board
+                  using the UnoJoy Github repo. All in all it was a very fun
+                  project and my first time using an Arduino Board!
                 </p>
               </div>
               <div class="pagelet">
