--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 />
               </div>
               <div class="pagelet">
-                <video controls>
+                <video height="800px" controls>
                   <source
                     src="assets/images/stick/stick.mp4"
                     type="video/mp4"
