--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         </p>
         <div id="cv">
           <div id="about-image-container">
-            <img src="assets/images/memo_3.jpg" alt="baby-yoda memo" />
+            <img src="assets/images/memo_3.jpeg" alt="tennis memo" />
           </div>
           <div id="education">
             <h3>Education</h3>
