--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                   <p class="bold">[Sep 2015 - May 2020]</p>
                 </div>
                 <p class="subheading">
-                  Paris Lodron University Salzburg, Salzburg (City) - Salzburg
+                  Higher Technical Education Institute Hallein, Hallein - Salzburg
                 </p>
               </div>
             </div>
